index.css
@import "./node_modules/bootstrap/dist/css/bootstrap.min.css";
@import "./node_modules/font-awesome/css/font-awesome.min.css";
::-webkit-scrollbar {
    width: 3px;
}
::-webkit-scrollbar-track {
    background: #ffffff;
}

    /* Handle */
::-webkit-scrollbar-thumb {
    background: #ffcb00;
}

    /* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: #a41d3145;
}


#projects .content::-webkit-scrollbar {
    width: 3px;
    display: none;
}
#projects .content::-webkit-scrollbar-track {
    background: #ffffff;
    display: none;
}

    /* Handle */
#projects .content::-webkit-scrollbar-thumb {
    background: #ffcb00;
    display: none;
}

    /* Handle on hover */
#projects .content::-webkit-scrollbar-thumb:hover {
    background: #a41d3145;
    display: none;
}


.w-40{
    width: 40%;
}
.w-60{
    width: 60%;
}
.px-6{
    padding: 0 5rem;
}
.side-bar{
    width: 50vw;
    position: fixed;
    min-width: 490px;
    z-index: 200;
    height: 100vh;
}
.side-bar .side_nav{
    height: 12.5%;
    color: #a41d31;
    font-weight: bold;
    position: relative;
    transition: none;
    font-family: 'Cormorant', serif;
    font-size: 15px;
    transition-property: all;
    /* transition-delay: 100ms; */
    transition-duration: 200ms;
    transition-timing-function: ease-in;
}
.side-bar .side_nav.active{
    height: 12.5%;
    font-size: 30px;
    color: #ffcb00;
}
.side-bar .side_nav.active span{
    background-color: #1b3058;
    padding: 0.3rem;
    border-radius: 0.3rem;;
}
.side-bar .side_nav:before{
    content: ' ';
    margin: 0.6rem .3rem;
    background-color: #a41d31;
    border-radius: 3rem;
    width: 0.5rem;
    height: 0.5rem;
    /* transition: all 1s ease; */
}
.side-bar .side_nav.active:before{
    background-color: #ffcb00;
    width: 1rem;
    height: 1rem;
    margin: 0.6rem 0.05rem;
    transition: all 200ms ease;
    transition-timing-function: ease-in;
}
/* .side-bar .side_nav.active:before{
    content: ' ';
    margin: 1.1rem .3rem;
    background-color: #a41d31;
    border-radius: 3rem;
    width: 0.5rem;
    height: 0.5rem;
    transition: all 1s ease;
} */
/* .side-bar .side_nav#home_nav.active:before {
    content: ' ';
    margin: 0.9rem .3rem;
    background-color: #a41d31;
    border-radius: 3rem;
    width: 0.5rem;
    height: 0.5rem;
    transition: all 1s ease;
} */
.side-bar:before{
    content: ' ';
    margin: 0.6rem 0.5rem;
    background-color: #a41d31;
    border-radius: 3rem;
    width: 1.5px;
    height: 84%;
    position: absolute;
    /* transition: all 1s ease; */
}
.tab_content{
    height: 100vh;;
    z-index: -1;
}
.tab_content .background-image{
    /* background-image: url('/static/projects.png'); */
    height: 100%;
    background-position: center;
    background-size: cover;
    opacity: 0.7;
    vertical-align: top;
    z-index:-1;
    /* position: sticky; */
    /* top: 0; */
}
.tab_content .background-image-2{
    /* background-image: url('./static/projects.png'); */
    height: 100%;
    background-position: center;
    background-size: cover;
    opacity: 0.2;
    vertical-align: top;
    z-index:-1;
    position: absolute;
    top: 0;
    animation-name: hovering;
    animation-iteration-count: infinite;
    animation-duration: 3500ms;
    z-index:99;
    /* background-color: gold;
    background-blend-mode: multiply; */
}
@keyframes hovering {
    0%{
        transform: translate(0px, 0px)
    }
    50%{
        transform: translate(-10px,-10px)
    }
    100%{
        transform: translate(0px, 0px)
    }
}
.tab_content .content{
    height: 100%;
    overflow-y: auto;
}
.fs-35{
    font-size: 35px;
}
.fs-14{
    font-size: 14px;
}
.fs-12{
    font-size: 12px;
}
.fs-20{
    font-size: 20px;
}
.fa.fa-envelope, .mail-color{
    color:  #B23121;
}
.font-weight-bold{
    font-weight: bold;
}
.fa-linkedin{
    color:#0676A8;
}
.fa-instagram{
    color:#dd2a7b;
}
.pointer{
    cursor: pointer;
}
.nav .logo{
    background-image: url(./static/pcelogo.png);
    height: 5rem;
    width: 5rem;
    background-position: center;
    background-size: cover;
}
#home .background-image{
    background-image: url(./static/home_nav.jpg);
    opacity: 0.5!important;
}
/* #home .background-image-2{
    background-image: url(./static/home_nav.jpg);
} */
.tab_content #home .content .data{
    color:#ffffff;
    background-color: #1b3058;
    border-radius: 0.5rem;
    text-align: justify;
    font-family: 'Cormorant', serif;
    font-size: 20px;
    max-height: 68%;
    overflow-y: auto;
    word-spacing: 0.25rem;
    line-height: 2.5rem;
}
.tab_content #home .content .header{
    font-size: 50px;
    font-weight: 500;
    font-family: 'Sofia', 'Cormorant', serif;
}
.tab_content #home .content  .name{
    font-size: 50px;
    font-weight: bold;
    color: grey;
    font-family: 'Cormorant', serif;
}
#projects .background-image{
    background-image: url(./static/projects.png);
}
#projects .background-image-2{
    background-image: url(./static/projects.png);
}
.tab_content #projects .content .project-container{
    background-color: #1b3058;
    height: 15rem;
    /* width: 15rem; */
    /* border-radius: 2rem; */
    /* opacity: 0.5; */
}
.tab_content #projects .content{
    height: 95%;
    overflow-y: auto;
}
.tab_content #projects .content .project-container .image img{
    width: 100%;
    height: 100%;
}
.tab_content #projects .content .project-container .image{
    /* background-image: url(./static/iot.png); */
    /* background-color: transparent; */
    /* background-position: center; */
    /* background-size: contain; */
    /* background-repeat: no-repeat; */
    width: 25%;
    height: 100%;
    /* transition: all 100ms ease; */
}
.tab_content #projects .content .project-container .text{
    width: 75%;
    height: 100%;
    text-align: justify;
    font-family: 'Cormorant', serif;
}
.tab_content #projects .content .project-container .text .title{
    font-size: 20px;
    word-spacing: 0.25rem;
    /* line-height: 2.5rem; */
    height: 25%;
}
.tab_content #projects .content .project-container .text .description{
    font-size: 15px;
    word-spacing: 0.25rem;
    line-height: 1.5rem;
    overflow-y: auto;
    height: 75%;
}
#achievements .background-image{
    background-image: url(./static/achievements.png);
}
#achievements .background-image-2{
    background-image: url(./static/achievements.png);
}
.tab_content #achievements .content .data{
    color:#ffffff;
    background-color: #1b3058;
    border-radius: 0.5rem;
    text-align: justify;
    font-family: 'Cormorant', serif;
    max-height: 86vh;
    overflow-y: auto;
}
.tab_content #achievements .content .data .title{
    font-size: 20px;
    word-spacing: 0.25rem;
    line-height: 2.0rem;
    color: #ffcb00;
}
.tab_content #achievements .content .data .description{
    font-size: 16px;
    word-spacing: 0.25rem;
    line-height: 1.5rem;
}
#internships .background-image{
    background-image: url(./static/internships.png);
}
#internships .background-image-2{
    background-image: url(./static/internships.png);
}
.tab_content #internships .content .data{
    color:#ffffff;
    background-color: #1b3058;
    border-radius: 0.5rem;
    text-align: justify;
    font-family: 'Cormorant', serif;
    max-height: 86vh;
    overflow-y: auto;
}
.tab_content #internships .content .data .title{
    font-size: 20px;
    word-spacing: 0.25rem;
    line-height: 2.0rem;
    color: #ffcb00;
}
.tab_content #internships .content .data .description{
    font-size: 16px;
    word-spacing: 0.25rem;
    line-height: 1.5rem;
}
.tab_content #internships .content .data .description .title_sm{
    color: #ffcb00;
}
#skills .background-image{
    background-image: url(./static/skills.png);
}
#skills .background-image-2{
    background-image: url(./static/skills.png);
}
.tab_content #skills .content .data{
    color:#ffffff;
    background-color: #1b3058;
    border-radius: 0.5rem;
    text-align: justify;
    font-family: 'Cormorant', serif;
    max-height: 86vh;
    overflow-y: auto;
}
.tab_content #skills .content .data .title{
    /* font-size: 18px;
    word-spacing: 0.25rem;
    line-height: 2.0rem; */
    color: #ffffff;
}
.tab_content #skills .content .data #soft .text, .tab_content #skills .content .data #hard .text{
    font-size: 20px;
    font-weight: 600;
    text-decoration: underline;
    word-spacing: 0.25rem;
    line-height: 2.0rem;
    color: #ffcb00;
}
.fa.fa-star{
    color: #ffcb00!important;
}
.tab_content #skills .content .data .rating{
    font-size: 16px;
    word-spacing: 0.25rem;
    line-height: 1.5rem;
}
.fa.fa-arrow-down{
    -webkit-text-stroke: 1.1px #ffffff;
}
#academics .background-image{
    background-image: url(./static/academics.png);
}
#academics .background-image-2{
    background-image: url(./static/academics.png);
}
.tab_content #academics .content .card .year{
    font-size: 22px;
    word-spacing: 0.25rem;
    line-height: 1.5rem;
    border-bottom: 1px solid #ffcb00;
    width: 90%;
    margin: auto;
    padding-bottom: 0.5rem;
    color: #ffffff;
}
.tab_content #academics .content .card .class{
    font-size: 18px;
    word-spacing: 0.25rem;
    line-height: 1.5rem;
    color: #ffffff;
    font-weight: 700;
}
.tab_content #academics .content .card .school{
    font-size: 18px;
    word-spacing: 0.25rem;
    line-height: 1.5rem;
    color: #ffffff;
}
.tab_content #academics .content .card .marks{
    font-size: 18px;
    word-spacing: 0.25rem;
    line-height: 1.5rem;
    color: #ffffff;
}
.tab_content #academics .content .card{
    text-align: justify;
    font-family: 'Cormorant', serif;
    word-spacing: 0.25rem;
    line-height: 2.0rem;
    background-color: #1b3058;
}
#contact .background-image{
    background-image: url(./static/contact_us.png);
}
#contact .background-image-2{
    background-image: url(./static/contact_us.png);
}
#contact .btn.btn-primary{
    background-color: #ffcb00;
    border: 1px solid #ffcb00;;
}
#contact form{
    text-align: justify;
    font-family: 'Cormorant', serif;
    color:  #B23121;
    font-weight: 800;
    font-size: 17px;
}
#contact input{
    text-align: justify;
    font-family: 'Cormorant', serif;
    color:  #B23121;
    font-size: 15px;
}
#contact textarea{
    text-align: justify;
    font-family: 'Cormorant', serif;
    color:  #B23121;
    word-spacing: 0.25rem;
    line-height: 1.5rem;
    font-size: 15px;
}
#resume_tab{
    background-color: #ffcb00;
    border-radius: 0.5rem;
}
html{
    scroll-behavior: smooth;
}
.tab_content .bg:nth-child(even){
    background-color: #ede7f6;
}
.logo{
    color: #a41d31;
    position: fixed;
    top: 0;
    height: 2rem;
    text-align: justify;
    font-family: 'Cormorant', serif;
    color:  #B23121;
    word-spacing: 0.25rem;
    line-height: 1.5rem;
    font-size: 15px;
    font-weight: 900;
}
.logo img{
    height: 100%;
}
.fs-59{
    font-size: 59px;
}

